--- a/index.html
+++ b/index.html
@@ -31,7 +31,110 @@
     <aside class="sidebar">
       <h2>Filters</h2>
       <form id="filters-form">
-        <!-- [Other fieldsets remain unchanged] -->
+        <!-- Stellar Class Filter Fieldset -->
+        <fieldset>
+          <legend class="collapsible" aria-expanded="false">Stellar Class</legend>
+          <div class="filter-content">
+            <div id="stellar-class-container"></div>
+          </div>
+        </fieldset>
+
+        <!-- Size Filter -->
+        <fieldset>
+          <legend class="collapsible" aria-expanded="false">Size</legend>
+          <div class="filter-content">
+            <div class="filter-item">
+              <input type="radio" id="size-stellar-class" name="size" value="stellar-class" checked />
+              <label for="size-stellar-class">Stellar Class-Based</label>
+            </div>
+            <div class="filter-item">
+              <input type="radio" id="size-distance" name="size" value="distance" />
+              <label for="size-distance">Distance-Based</label>
+            </div>
+          </div>
+        </fieldset>
+
+        <!-- Color Filter -->
+        <fieldset>
+          <legend class="collapsible" aria-expanded="false">Color</legend>
+          <div class="filter-content">
+            <div class="filter-item">
+              <input type="radio" id="color-stellar-class" name="color" value="stellar-class" checked />
+              <label for="color-stellar-class">Stellar Class-Based</label>
+            </div>
+            <div class="filter-item">
+              <input type="radio" id="color-constellation" name="color" value="constellation" />
+              <label for="color-constellation">Constellation</label>
+            </div>
+            <div class="filter-item">
+              <input type="radio" id="color-galactic-plane" name="color" value="galactic-plane" />
+              <label for="color-galactic-plane">Galactic Plane</label>
+            </div>
+          </div>
+        </fieldset>
+
+        <!-- Opacity Filter -->
+        <fieldset>
+          <legend class="collapsible" aria-expanded="false">Opacity</legend>
+          <div class="filter-content">
+            <div class="filter-item">
+              <input type="radio" id="opacity-absolute-mag" name="opacity" value="absolute-magnitude" checked />
+              <label for="opacity-absolute-mag">Absolute Magnitude-Based</label>
+            </div>
+            <div class="filter-item">
+              <input type="radio" id="opacity-75" name="opacity" value="75" />
+              <label for="opacity-75">75% Opacity</label>
+            </div>
+          </div>
+        </fieldset>
+
+        <!-- Stars Shown Filter -->
+        <fieldset>
+          <legend class="collapsible" aria-expanded="false">Stars Shown</legend>
+          <div class="filter-content">
+            <div class="filter-item">
+              <input type="radio" id="stars-shown-all" name="stars-shown" value="all" checked />
+              <label for="stars-shown-all">All Stars</label>
+            </div>
+            <div class="filter-item">
+              <input type="radio" id="stars-shown-visible" name="stars-shown" value="visible" />
+              <label for="stars-shown-visible">Visible Stars (Magnitude ≤ 6)</label>
+            </div>
+          </div>
+        </fieldset>
+
+        <!-- Distance Filter Fieldset -->
+        <fieldset>
+          <legend class="collapsible" aria-expanded="false">Distance Filter (LY)</legend>
+          <div class="filter-content">
+            <div class="filter-item">
+              <label for="min-distance-slider">Minimum Distance:</label>
+              <input type="range" id="min-distance-slider" min="0" max="100" value="0" />
+              <input type="number" id="min-distance-number" name="min-distance" min="0" max="100" value="0" />
+            </div>
+            <div class="filter-item">
+              <label for="max-distance-slider">Maximum Distance:</label>
+              <input type="range" id="max-distance-slider" min="0" max="100" value="20" />
+              <input type="number" id="max-distance-number" name="max-distance" min="0" max="100" value="20" />
+            </div>
+          </div>
+        </fieldset>
+
+        <!-- Connections Filter (disabled by default) -->
+        <fieldset>
+          <legend class="collapsible" aria-expanded="false">Connections (LY)</legend>
+          <div class="filter-content">
+            <div class="filter-item">
+              <input type="checkbox" id="enable-connections" name="enable-connections" />
+              <label for="enable-connections">Enable Connections</label>
+            </div>
+            <div class="filter-item">
+              <input type="range" id="connection-slider" name="connections" min="1" max="50" value="7" disabled />
+              <input type="number" id="connection-number" name="connections-number" min="1" max="50" value="7" disabled />
+              <span id="connection-value">7</span> Light Years
+            </div>
+          </div>
+        </fieldset>
 
         <!-- LOW DENSITY MAPPING Filter -->
         <fieldset>
@@ -70,7 +173,7 @@
                 disabled
                 style="width: 200px;"
               />
-              <!-- Number input shows the effective subdivision factor -->
+              <!-- Number input shows the effective subdivision factor (read-only) -->
               <input 
                 type="number" 
                 id="low-density-grid-number" 
@@ -141,7 +244,7 @@
       </form>
     </aside>
 
-    <!-- Maps Section (unchanged) -->
+    <!-- Maps Section -->
     <section class="maps-section">
       <div class="map-container">
         <h2>True Coordinates Map</h2>
@@ -156,7 +259,7 @@
     </section>
   </div>
 
-  <!-- Tooltip and Labels Container (unchanged) -->
+  <!-- Tooltip -->
   <div id="tooltip" class="hidden">
     <div id="tooltip-starName"></div>
     <div id="tooltip-systemName"></div>
@@ -166,6 +269,8 @@
     <div id="tooltip-apparentMag"></div>
     <div id="tooltip-absoluteMag"></div>
   </div>
+
+  <!-- Labels Container -->
   <div class="label-container"></div>
 
   <!-- Scripts -->
@@ -190,7 +295,7 @@
       document.querySelector('.sidebar').classList.toggle('open');
     });
 
-    // Connection filter
+    // Connection filter controls
     document.getElementById('enable-connections').addEventListener('change', function() {
       const enabled = this.checked;
       document.getElementById('connection-slider').disabled = !enabled;
@@ -251,7 +356,7 @@
       document.getElementById('high-density-value').textContent = this.value;
     });
 
-    // Low density grid slider sync with discrete mapping
+    // Low density grid slider sync (discrete mapping)
     document.getElementById('low-density-grid-slider').addEventListener('input', function() {
       const gridValue = sliderToGridValue(this.value);
       document.getElementById('low-density-grid-number').value = gridValue.toFixed(0);
@@ -261,7 +366,7 @@
       document.getElementById('low-density-grid-slider').value = sliderVal;
     });
 
-    // High density grid slider sync with discrete mapping
+    // High density grid slider sync (discrete mapping)
     document.getElementById('high-density-grid-slider').addEventListener('input', function() {
       const gridValue = sliderToGridValue(this.value);
       document.getElementById('high-density-grid-number').value = gridValue.toFixed(0);
